--- a/shop.html
+++ b/shop.html
@@ -159,7 +159,7 @@ margin-left: 0px;">
       </h23>    
       <hr>
       
-      <p>Total <span class="price" style="color:black"><b>...#</b></span></p>
+      <p>Total <span class="price" style="color:black"><b>...$</b></span></p>
       </div>
       </div>
       </div>
