--- a/juices.html
+++ b/juices.html
@@ -41,7 +41,7 @@
             
                 </div>
             
-                <div class="flex-container1">
+                <div class="flex-container">
                 <div><h15><b><div class="w3-left-align"><p>Case Makes 24 Gallons!(6 - 1/2 Gallon Containers per Case)
                     Case Price - $164.00 / Cost per Gallon - $6.80 / 5.3 Cents per Ounce Free Delivery - Minimum Order One Case - Six Flavors per Case All Products Are 100% Fruit Juice Blends
                     When Reconstituted 1+7 With Water</p></div></b></h15></div>
