--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 </div>
 <div class="flex-container1">
    <div class="flex-container1" style="width: 250px;margin-top: 25px;padding-top: 10px;">
-    <div><img src="../Images/Davenport1.jpg" alt="Penny Juice Healthy Natural Flavors &amp; Ingrients" width="600" height="300"></div>
+    <div><img src="../Images/Davenport1.jpg" alt="Penny Juice Healthy Natural Flavors &amp; Ingrients" width="600" height="300" style="margin-left:10px"></div>
     </div>
     <div class="flexbox">
   <div> <h3>Welcome to Davenport</h3></div>
@@ -57,12 +57,12 @@
   </div>
 </div>
     <div class="flex-container3">
-  <div><h5>Our Story</h5></div>
-  <div><h6> We provide a variety of flavors that all kids can enjoy! All the juice concentrates that we sell are compliant with the USDA and FDA guidelines. You don't need to refrigerate the concentrates before or after opening them.</h6></div>
-  <div><h2>Who we serve</h2></div>
-  <div><h7>If you're running a childcare center and want to serve healthy beverages to kids every day, order quality juice concentrates from Penny Juice of America.</h7> </div>
-  <div><h8><b>Our operatons</b></h8></div>
-  <div><h9>Get delicious and nutritious 100% fruit juice from Penny Juice of America. We provide 100% blended fruit juice concentrates that are specially made for kids and meet all the requirements of the FDA with regard to subsidy and nutrition. Customers prefer our products for their benefits, features, variety, service, and competitive pricing. These blended fruit juice concentrates are for all childcare centers and preschools. PennyJuice of America uses only the highest quality fruit juice products.</h9></div>
+  <div style="margin-left: 13px;"><h3>Our Story</h3></div>
+  <div style="margin-left: 13px;"><h6> We provide a variety of flavors that all kids can enjoy! All the juice concentrates that we sell are compliant with the USDA and FDA guidelines. You don't need to refrigerate the concentrates before or after opening them.</h6></div>
+  <div style="margin-left: 13px;"><h2>Who we serve</h2></div>
+  <div style="margin-left: 13px;"><h6>If you're running a childcare center and want to serve healthy beverages to kids every day, order quality juice concentrates from Penny Juice of America.</h6> </div>
+  <div style="margin-left: 13px;"><h8><b>Our operatons</b></h8></div>
+  <div style="margin-left: 13px;"><h6>Get delicious and nutritious 100% fruit juice from Penny Juice of America. We provide 100% blended fruit juice concentrates that are specially made for kids and meet all the requirements of the FDA with regard to subsidy and nutrition. Customers prefer our products for their benefits, features, variety, service, and competitive pricing. These blended fruit juice concentrates are for all childcare centers and preschools. PennyJuice of America uses only the highest quality fruit juice products.</h6></div>
   <div><img src="../Images/Children-center.jpg" width="600" height="300"></div>
 
 </div>
