--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
         <label for="lname">Last Name</label>
         <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-        <label for="country">Email</label>
-        <input type="text" id="Email" name="Email" placeholder="Your Email..">
+        <label for="Email">Email</label>
+        <input type="text" id="Email" name="Email" placeholder="Your Email.." autocomplete="on">
         <label for="subject">Subject</label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
         <input type="submit" value="Submit">
