--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Add font awesome icons -->
-<a href="https://www.facebook.com/" class="fa fa-facebook" style="margin-left:1100px;"></a> 
+<a href="https://www.facebook.com/" class="fa fa-facebook" style="margin-left:1560px;"></a> 
 <a href="https://twitter.com/" class="fa fa-twitter"></a>
         <div class="header">
         <a href="file:///Volumes/David's/PennyJuice/HTML/Index.html"><img src="../Images/Logo-2.jpg"></a>
-        <div class="content">
+        <div class="content" style="width: 100%; height: 0px;">
         <div class="nav">   
                 <ul>
                 <li><p><a href="file:///Volumes/David's/PennyJuice/HTML/Index.html">Home</a></p></li>
