--- a/shop.html
+++ b/shop.html
@@ -14,11 +14,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Add font awesome icons -->
-<a href="https://www.facebook.com/" class="fa fa-facebook" style="margin-left:1100px;"></a> 
+<a href="https://www.facebook.com/" class="fa fa-facebook" style="margin-left:1560px;"></a> 
 <a href="https://twitter.com/" class="fa fa-twitter"></a>
         <div class="header">
         <a href="file:///Volumes/David's/PennyJuice/HTML/Index.html"><img src="../Images/Logo-2.jpg"></a>
-        <div class="content">
+        <div class="content" style="width: 100%; height: 0px;">
         <div class="nav">   
                 <ul>
                 <li><p><a href="file:///Volumes/David's/PennyJuice/HTML/Index.html">Home</a></p></li>
@@ -93,7 +93,7 @@ margin-left: 0px;">
             <div class="row">
               <div class="col-50">
                 <label for="expyear">Exp Year</label>
-                <input type="text" id="expyear" name="expyear" placeholder="2018">
+                <input type="text" id="expyear" name="expyear" placeholder="2023">
               </div>
               <div class="col-50">
                 <label for="cvv">CVV</label>
@@ -112,7 +112,7 @@ margin-left: 0px;">
   </div>
 
   <div class="col-25">
-    <div class="container">
+    <div class="container" style="margin-right: 10px;">
       <h22><b>Cart</b></h22>
         <span class="price" style="color:black">
           <i class="fa fa-shopping-cart"></i>
