--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <meta name= "author" content= "David Anderson">
 <meta name= "Keywords" content="100% Fruit Juice Concentrate/ concentrated juice, 100 percent, blend, Apple, grape, white grape, orange, concentrated, flavors, Childcare, Preschool, Head Start, Juice, KID, CHILD, Natural, Brand, CACFP, USDA, No sugar added, no added sugar, Real fruit, organic, Best, leader, top, quaility, exclusive, better, delicious, FREE DELIVERY">
 <meta name="description" content= "563-386-1999 - FREE shipping. Juice concentrates for kids. Different juice flavors in a case. Fruit juice concentrates for childcare centers.">
-<link rel="stylesheet" type="text/css" href="../stylesheet.css">
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
    
@@ -21,22 +21,22 @@
 <a href="https://www.facebook.com/" class="fa fa-facebook" style="margin-left:1560px;"></a> 
 <a href="https://twitter.com/" class="fa fa-twitter"></a>
         <div class="header">
-        <a href="file:///Volumes/David's/PennyJuice/HTML/Index.html"><img src="../Images/Logo-2.jpg"></a>
+        <a href="Index.html"><img src="Images/Logo-2.jpg"></a>
         <div class="content" style="width: 100%; height: 0px;">
         <div class="nav">   
                 <ul>
-                <li><p><a href="file:///Volumes/David's/PennyJuice/HTML/Index.html">Home</a></p></li>
-                <li><p><a href="file:///Volumes/David's/PennyJuice/HTML/about.html">About</a></p></li>
-                <li><p><a href="file:///Volumes/David's/PennyJuice/HTML/juices.html">Juices</a></p>
+                <li><p><a href="Index.html">Home</a></p></li>
+                <li><p><a href="about.html">About</a></p></li>
+                <li><p><a href="juices.html">Juices</a></p>
                 <ul>
-                        <li><p><a href="file:///Volumes/David's/PennyJuice/HTML/juices.html">Grape</a></p></li>
-                        <li><p><a href="file:///Volumes/David's/PennyJuice/HTML/juices.html">Berry</a></p></li>
-                        <li><p><a href="file:///Volumes/David's/PennyJuice/HTML/juices.html">Apple</a></p></li>
+                        <li><p><a href="juices.html">Grape</a></p></li>
+                        <li><p><a href="juices.html">Berry</a></p></li>
+                        <li><p><a href="juices.html">Apple</a></p></li>
                 </ul>
                 </li>
-                <li><p><a href="file:///Volumes/David's/PennyJuice/HTML/contact.html"><b>Contact</b></a></p>
+                <li><p><a href="contact.html"><b>Contact</b></a></p>
 
-                <li><p><a href="file:///Volumes/David's/PennyJuice/HTML/shop.html">Shop</a></p></li>
+                <li><p><a href="shop.html">Shop</a></p></li>
                 </ul>
                 </div>
                 </div>
@@ -54,7 +54,7 @@
       </div>
       <div class="row">
       <div class="column">
-      <img src="../Images/PJ_finalslideshow.gif" style="width:100%">
+      <img src="Images/PJ_finalslideshow.gif" style="width:100%">
       </div>
       <div class="column">
       <form action="/action_page.php">
