--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                 </ul>
                 </li>
                 <li><p><a href="contact.html">Contact</a></p>
-
+                <li><a href="blog.html" style="margin-top: 16px;">Blog</a></li>
                 <li><p><a href="shop.html">Shop</a></p></li>
                 </ul>
                 </div>
