--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                 </ul>
                 </li>
                 <li><p><a href="contact.html"><b>Contact</b></a></p>
-
+                <li><a href="blog.html" style="margin-top: 16px;">Blog</a></li>
                 <li><p><a href="shop.html">Shop</a></p></li>
                 </ul>
                 </div>
