--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Add font awesome icons -->
-<a href="https://www.facebook.com/" class="fa fa-facebook" style="margin-left:1560px;"></a> 
+<a href="https://www.facebook.com/" class="fa fa-facebook" style="margin-left:1525px;"></a> 
 <a href="https://twitter.com/" class="fa fa-twitter"></a>
 <div class="header">
 <a href="Index.html"><img src="Images/Logo-2.jpg"></a>
@@ -55,23 +55,21 @@
 <div class="row" style="margin-top: 100px;">
   <div class="leftcolumn">
     <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
+      <h26><b>Welcome to Pennyjuice</b></h26>
       <div class="flex container2">  
-    <div><img src="Images/PJDrawing.jpg" alt="Penny Juice Healthy Natural Flavors & Ingredients" width="1250" height="300"></div>
+    <div><img src="Images/PJDrawing.jpg" alt="Penny Juice Healthy Natural Flavors & Ingredients" width="1000" height="300"></div>
     </div>
-      <p>Some text..</p>
+      <p>Juicing can play a role in a balanced diet. For instance, it can help you get fruits and vegetables if you don't enjoy eating them. Juicing also can give the digestive system a rest from digesting fiber. This may help some people who have certain health conditions or who receive certain medical treatments.</p>
     </div>
     <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
+      <h26><b>Come meet with our team of professionals</b></h26>
+      <div><img src="Images/PJprofesstionals.jpg" alt="Penny Juice Healthy Natural Flavors & Ingredients" width="1000" height="300"></div>
+      <p>We are passionate about breaking down barriers and ensuring every client has a positive experience. We believe our personal and professional experiences provided us with the necessary skills to deliver top-of-the-line support to each customer I interact with and also exceed expectations.</p>
     </div>
   </div>
   <div class="rightcolumn">
     <div class="card">
-      <h2>About Me</h2>
+      <h26><b>About us</b></h26>
       <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
@@ -88,21 +86,55 @@
       <p>We work our hardest to ensure that children can stay healthy & hydrated.</p>
     </div>
     <div class="card">
-      <h3>Popular Post</h3>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div>
+      <h26><b>Popular Post</b></h26>
+      <div class="flip-card " style="width: 200px; height: 200px;">
+  <div class="flip-card-inner ">
+    <div class="flip-card-front ">
+      <img src="Images/PJ_Apple.jpg" alt="Avatar" style="width:200px;height:200px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Favorite</h1>
+      <p>Best seller</p>
+      <p>Apples are a good source of nutrients, including fiber, vitamin C, and antioxidants.</p>
+    </div>
+  </div>
+</div>
+        <br>
+      <div class="flip-card " style="width: 200px; height: 200px;">
+  <div class="flip-card-inner " style="width: 200px; height: 200px;">
+    <div class="flip-card-front ">
+      <img src="Images/PJ_Strawberry.jpg" alt="Avatar" style="width:200px;height: 200px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>This Weeks Special</h1>
+      <p>5 cases for half off</p>
+      <p>Strawberries' high levels of vitamin C help reduce the risk of serious health conditions.</p>
+    </div>
+  </div>
+</div><br>
+       <div class="flip-card " style="width: 200px; height: 200px;">
+  <div class="flip-card-inner " style="width: 200px; height: 200px;">
+    <div class="flip-card-front ">
+      <img src="Images/PJ_Blueberry.jpg" alt="Avatar" style="width:200px;height: 200px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>New flavor</h1>
+      <p>Order now</p>
+      <p>They may help lower blood pressure, prevent heart disease, improve memory, aid in exercise recovery, and more.</p>
+    </div>
+  </div>
+</div>
     </div>
     <div class="card">
-      <h3>Follow Me</h3>
-      <p>Some text..</p>
+      <h26><b>Follow us</b></h26>
+      <p><b>Some text..</b></p>
     </div>
   </div>
     </div>
 
-<div class="footer">
-  <h2>Footer</h2>
-</div>
+   <div class="footer">
+            Copyright &copy; Penny Juice 2023-24 Privacy Policy | Do Not Share My Information | Conditions of Use | Notice and Take Down Policy | Website Accessibility Policy © 2023 The content on this website is owned by us and our licensors. Do not copy any content (including images) without our consent.
+        </div>
     
 
 
