--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,7 @@
     <div class="flip-card-front ">
       <img src="Images/PJ_Apple.jpg" alt="Avatar" style="width:200px;height:200px;">
     </div>
-    <div class="flip-card-back">
+    <div class="flip-card-back" style="background-color: red;">
       <h1>Favorite</h1>
       <p>Best seller</p>
       <p>Apples are a good source of nutrients, including fiber, vitamin C, and antioxidants.</p>
@@ -105,7 +105,7 @@
     <div class="flip-card-front ">
       <img src="Images/PJ_Strawberry.jpg" alt="Avatar" style="width:200px;height: 200px;">
     </div>
-    <div class="flip-card-back">
+    <div class="flip-card-back" style="background-color: pink;">
       <h1>This Weeks Special</h1>
       <p>5 cases for half off</p>
       <p>Strawberries' high levels of vitamin C help reduce the risk of serious health conditions.</p>
@@ -117,7 +117,7 @@
     <div class="flip-card-front ">
       <img src="Images/PJ_Blueberry.jpg" alt="Avatar" style="width:200px;height: 200px;">
     </div>
-    <div class="flip-card-back">
+    <div class="flip-card-back" style="background-color: royalblue;">
       <h1>New flavor</h1>
       <p>Order now</p>
       <p>They may help lower blood pressure, prevent heart disease, improve memory, aid in exercise recovery, and more.</p>
@@ -127,7 +127,8 @@
     </div>
     <div class="card">
       <h26><b>Follow us</b></h26>
-      <p><b>Some text..</b></p>
+      <p><a href="https://www.facebook.com/" style="color: black">Facebook</a></p>
+      <p><a href="https://twitter.com/" style="color: black">X</a></p>
     </div>
   </div>
     </div>
