--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
   </div>
 </div>
     <div class="flex-container3">
-  <div style="margin-left: 13px;"><h3>Our Story</h3></div>
+  <div style="margin-left: 13px; style padding-top: 6px;"><h3>Our Story</h3></div>
   <div style="margin-left: 13px;"><h6> We provide a variety of flavors that all kids can enjoy! All the juice concentrates that we sell are compliant with the USDA and FDA guidelines. You don't need to refrigerate the concentrates before or after opening them.</h6></div>
   <div style="margin-left: 13px;"><h2>Who we serve</h2></div>
   <div style="margin-left: 13px;"><h6>If you're running a childcare center and want to serve healthy beverages to kids every day, order quality juice concentrates from Penny Juice of America.</h6> </div>
