--- a/blog.html
+++ b/blog.html
@@ -126,7 +126,7 @@
 </div>
     </div>
     <div class="card">
-      <h26><b>Follow us</b></h26>
+      <h26><b>Follow us at</b></h26>
       <p><a href="https://www.facebook.com/" style="color: black">Facebook</a></p>
       <p><a href="https://twitter.com/" style="color: black">X</a></p>
     </div>
